# Yassin-Saif-Heba-Group-Mission-ASU

./: README.md
install/: local_setup.sh  setup.sh
install/erc_nav_benchmark/lib/erc_nav_benchmark/: teleop_gui_node.py
install/erc_nav_benchmark/local/lib/python3.10/dist-packages/erc_nav_benchmark/: teleop_gui_node.py  teleop_node.py  (+1 more)
install/erc_nav_benchmark/local/lib/python3.10/dist-packages/erc_nav_benchmark-1.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
install/erc_nav_benchmark/logs/: run_20260629_134158_level1_Timeout.txt  run_20260629_134533_level1_Timeout.txt  run_20260629_135132_level1_Timeout.txt  run_20260629_135708_level1_Timeout.txt  run_20260629_140030_level1_Timeout.txt  run_20260629_140151_level1_Catastrophic_Collision.txt  run_20260629_140730_level1_Target_Reached.txt  run_20260629_140904_level3_Catastrophic_Collision.txt  run_20260629_141021_level3_Catastrophic_Collision.txt  run_20260629_141238_level2_Catastrophic_Collision.txt  run_20260629_141630_level1_Catastrophic_Collision.txt  run_20260629_141806_level1_Catastrophic_Collision.txt  run_20260629_142147_level1_Target_Reached.txt
install/erc_nav_benchmark/share/ament_index/resource_index/package_run_dependencies/: erc_nav_benchmark
install/erc_nav_benchmark/share/ament_index/resource_index/parent_prefix_path/: erc_nav_benchmark
install/erc_nav_benchmark/share/erc_nav_benchmark/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/erc_nav_benchmark/share/erc_nav_benchmark/cmake/: erc_nav_benchmarkConfig.cmake
install/erc_nav_benchmark/share/erc_nav_benchmark/config/: waypoints.yaml
install/erc_nav_benchmark/share/erc_nav_benchmark/launch/: benchmark.launch.py
install/erc_nav_benchmark/share/erc_nav_benchmark/models/erc_rover/: model.config  model.sdf
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/src/my_robot/: aruco_detector.py
ros2_ws/src/my_robot/launch/: display.launch.py
ros2_ws/src/my_robot/urdf/: my_robot.urdf
ros2_ws/src/my_robot/worlds/: aruco_world.world
src/erc_nav_benchmark/: CMakeLists.txt  README.md  package.xml  run_benchmark.py
src/erc_nav_benchmark/erc_nav_benchmark/: judging_engine.py  teleop_gui_node.py
src/erc_nav_benchmark/launch/: benchmark.launch.py
src/erc_nav_benchmark/worlds/: level_1.world  level_2.world  level_3.world
